--- a/ppasrc/xorsearch/xorsearch-1.11.4/debian/changelog
+++ b/ppasrc/xorsearch/xorsearch-1.11.4/debian/changelog
@@ -1,4 +1,4 @@
-xorsearch (1.11.4) bionic; urgency=medium
+xorsearch (1.11.4-1) bionic; urgency=medium
 
   * Updated to latest upstream version. 
 
