--- a/ppasrc/oledump/oledump-0.0.54/debian/changelog
+++ b/ppasrc/oledump/oledump-0.0.54/debian/changelog
@@ -1,3 +1,9 @@
+oledump (0.0.54) bionic; urgency=medium
+
+  * Updated to latest upstream version. 
+
+ -- REMnux Distribution <distro@remnux.org>  Tue, 06 Oct 2020 08:29:00 -0400
+
 oledump (0.0.53) bionic; urgency=medium
 
   * Updated to latest upstream version.
