--- a/ppasrc/oledump/oledump-0.0.56-focal/debian/changelog
+++ b/ppasrc/oledump/oledump-0.0.56-focal/debian/changelog
@@ -1,3 +1,9 @@
+oledump (0.0.56-focal) focal; urgency=medium
+
+  * Updated to latest upstream version.
+
+ -- REMnux Distribution <distro@remnux.org>  Sat, 05 Dec 2020 12:30:11 -0500
+
 oledump (0.0.55) bionic; urgency=medium
 
   * Updated to latest upstream version.
