--- a/ppasrc/oledump/oledump-0.0.57-focal/debian/changelog
+++ b/ppasrc/oledump/oledump-0.0.57-focal/debian/changelog
@@ -1,3 +1,9 @@
+oledump (0.0.57-focal) focal; urgency=medium
+
+  * Updated to latest upstream version. 
+
+ -- REMnux Distribution <distro@remnux.org>  Sat, 12 Dec 2020 13:35:09 -0500
+
 oledump (0.0.56-focal) focal; urgency=medium
 
   * Updated to latest upstream version.
