--- a/ppasrc/oledump/oledump-0.0.57-bionic/debian/changelog
+++ b/ppasrc/oledump/oledump-0.0.57-bionic/debian/changelog
@@ -1,3 +1,9 @@
+oledump (0.0.57) bionic; urgency=medium
+
+  * Updated to latest upstream version.
+
+ -- REMnux Distribution <distro@remnux.org>  Sat, 12 Dec 2020 13:36:42 -0500
+
 oledump (0.0.56) bionic; urgency=medium
 
   * Updated to latest upstream version.
