--- a/ppasrc/ghidra/ghidra-9.2-bionic/debian/changelog
+++ b/ppasrc/ghidra/ghidra-9.2-bionic/debian/changelog
@@ -1,3 +1,9 @@
+ghidra (9.2.1-bionic) bionic; urgency=medium
+
+  * Upgraded to latest upstream release. 
+
+ -- REMnux Distribution <distro@remnux.org>  Mon, 21 Dec 2020 20:16:09 -0500
+
 ghidra (9.2-1-bionic) bionic; urgency=medium
 
   * Initial Release.
