--- a/ppasrc/runsc/runsc-0.1-bionic/debian/changelog
+++ b/ppasrc/runsc/runsc-0.1-bionic/debian/changelog
@@ -1,3 +1,9 @@
+runsc (0.11.3-bionic) bionic; urgency=medium
+
+  * Updated .exe files to use the latest versions.
+
+ -- REMnux Distribution <distro@remnux.org>  Sun, 18 Jul 2021 14:37:27 -0400
+
 runsc (0.11.2-bionic) bionic; urgency=medium
 
   * Updated .exe files to use the latest versions. 
