--- a/ppasrc/runsc/runsc-0.1-focal/debian/changelog
+++ b/ppasrc/runsc/runsc-0.1-focal/debian/changelog
@@ -1,3 +1,9 @@
+runsc (0.1.3-focal) focal; urgency=medium
+
+  * Updated .exe files to use the latest versions.
+
+ -- REMnux Distribution <distro@remnux.org>  Sun, 18 Jul 2021 14:35:35 -0400
+
 runsc (0.1.2-focal) focal; urgency=medium
 
   * Updated .exe files to use the latest versions. 
